# openjade-1.3.2-modified

./: README  fixRTF.sh
openjade-1.3.2.modified/: ChangeLog  Makefile  Makefile.comm  Makefile.comm.dist  Makefile.comm.in  Makefile.dist  Makefile.in  Makefile.lib  Makefile.lib.CC  Makefile.lib.dist  Makefile.lib.in  Makefile.lib.sun  Makefile.prog  Makefile.prog.dist  Makefile.prog.in  Makefile.wat  NEWS  SP.dsw  build-win32.bat  config.status  configure  jade-generate.mak  jade.dsw  jade.mak  libtool  msggen.pl  releasenotes.html  releasenotes.ps  sp-generate.mak  tags
openjade-1.3.2.modified/config/: aclocal.m4  configure.in  mkinstalldirs
openjade-1.3.2.modified/contrib/: README  catalog  rtf2doc.pl  transform.dsl
openjade-1.3.2.modified/develdoc/: jadedoc.sgml  missing
openjade-1.3.2.modified/docsrc/: Makefile  jade.1  nsgmls.1  openjade.1  openjade.xml  releasenotes.dsl  releasenotes.xml  sgmlnorm.1  spam.1  spent.1  sx.1
openjade-1.3.2.modified/grove/: Makefile.sub  Node.cxx  Node.h  grove.dsp
openjade-1.3.2.modified/groveoa/: CGroveBuilder.cxx  CGroveBuilder.h  GroveNode.cxx  groveoa.dsp  groveoa.idl
openjade-1.3.2.modified/include/: config.h  config.h.in
openjade-1.3.2.modified/jade/: HtmlMessages.h  JadeMessages.h  Makefile.lt  Makefile.sub  MifFOTBuilder.cxx  MifFOTBuilder_inst.cxx  MifFOTBuilder_inst.m4  MifMessages.h  RtfFOTBuilder.cxx  RtfFOTBuilder.cxx.0606  RtfMessages.h  SgmlFOTBuilder.cxx  TeXFOTBuilder.cxx  TeXFOTBuilder_inst.cxx  TeXFOTBuilder_inst.m4  TeXMessages.h  TransformFOTBuilder.cxx  TransformFOTBuilder.h  jade.cxx  jade.dsp  openjade
openjade-1.3.2.modified/jadedist/: bin-files.txt  jadedist.dsp
openjade-1.3.2.modified/spgrove/: GroveBuilder.cxx  Makefile.sub  spgrove.dsp  threads.h
openjade-1.3.2.modified/style/: DssslApp.cxx  DssslApp.h  DssslAppMessages.h  DssslAppMessages.msg  DssslAppMessages.rc  DssslSpecEventHandler.cxx  DssslSpecEventHandler.h  ELObj.cxx  ELObj.h  ELObjPropVal.h  EvalContext.h  Expression.cxx  FOTBuilder.cxx  FOTBuilder.h  FlowObj.cxx  FlowObj_inst.cxx  GroveManager.h  InheritedC.cxx  Insn.cxx  Insn2.h  Interpreter.cxx  Interpreter.h  InterpreterMessages.h  InterpreterMessages.msg  InterpreterMessages.rc  LangObj.cxx  LangObj.h  Makefile.sub  MessageModule.cxx  ProcessContext.cxx  ProcessContext.h  SchemeParser.cxx  SchemeParser.h  SosofoObj.h  Style.cxx  Style.h  StyleEngine.cxx  StyleEngine.h  charNames.h  charProps.h  (+8 more)
openjade-1.3.2.modified/testsuite/: Makefile  expr-lang.dsl  expr-lang.expected  null.sgml
